overflow fixed for bookmark items

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@
 
 .content-section {
     flex: 3;
-
+    min-height: 0;
 }
 
 .tab-section {
