--- a/src/app/bookmarks/bookmarks.component.scss
+++ b/src/app/bookmarks/bookmarks.component.scss
@@ -1,13 +1,16 @@
 .bookmarks-wrapper {
     height: 100%;
+    overflow-y: scroll;
 }
 
 
 .container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 
+    height: 50vh;
     max-width: 35rem;
     gap: 5px;
     margin: auto;
